# torchFS

./: .clangd  .env.example  .gitignore  CMakeLists.txt  README.md  vcpkg.json
deploy/: README.md  Vagrantfile  ansible.cfg  install_docker.yml  launch_nodes.yml
deploy/group_vars/: all.yml
deploy/inventory/: hosts.ini
deploy/roles/docker/tasks/: main.yml
profiling/: Makefile  metaindex.c  metaindex.h  passthrough.c  passthrough_helpers.h
report/: lib.typ  main.typ  refs.bib  test.typ
report/scripts/: graphs.py
src/client/: TorchFuse.cc  TorchFuse.h  cache.cc  cache.h  client.cc  directory.cc  directory.h  directory_manager.cc  directory_manager.h  eviction_policy.h  file_handle.cc  file_handle.h  fuse_wrapper.h  main.cc  metadata.cc  metadata.h  metadata_client.cc  metadata_client.h  namespace.cc  namespace.h  options.h  storage_client.cc  storage_client.h  storage_engine.cc  storage_engine.h  torch_fuse.cc  torch_fuse.h
src/client/cache_policies/: fifo_policy.h  filo_policy.h  lfu_policy.h  lru_policy.h
src/common/: util.cc
src/common/proto/: metadata.proto  storage.proto
src/include/: slice.h  status.h  util.h
src/include/proto/: attributes.proto
src/metadata/: main.cc  metadata.cc  rpc_service.cc  rpc_service.h  server.cc  server.h  state_machine.cc  state_machine.h  storage.cc  storage.h
src/storage/: main.cc  server.cc  server.h  storage.cc  storage_backend.cc  storage_backend.h
